# repo-template-python

./: .gitignore  .gitleaksignore  CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: README.md
.github/: CONTRIBUTING.md  META-CHECKLIST.md
.github/ISSUE_TEMPLATE/: bug_report.md  doc_request.md  feature_request.md
.github/instructions/: README.md  architecture-diagrams.instructions.md  master-workflow.md  security-review.instructions.md  tdd-workflow.instructions.md  threat-modeling.instructions.md
.github/prompts/: README.md  create-threat-model.prompt.md  workflow-requirements-to-spec.prompt.md
docs/: INDEX.md  README.md  SPEC-CROSS-REFERENCE.md  uvx-setup-guide.md
docs/diagrams/: README.md
docs/history/: 2025-11-09-setup-conversation.md  2025-11-09-workflow-usage-guide.md  README.md
docs/output-logs/: README.md
docs/requirements/: README.md
docs/rules/: README.md  docstring-standards.md  error-resolution-kb.md  markdown-standards.md  output-format.md
docs/specifications/: README.md
docs/templates/: requirements-template.md  spec-template.md
src/: tmp.py
src/utils/: logger.py
test/: test_tmp.py
