[project]
name = "repo-template-python"
version = "0.1.0"
description = "Template repo for Python projects and AI code generation support."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "black==25.1.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "flake8==7.2.0",
    "iniconfig==2.1.0",
    "mccabe==0.7.0",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "pycodestyle==2.13.0",
    "pyflakes==3.3.2",
    "pygments==2.19.1",
    "pytest==8.4.0",
]
